cabal-version:      3.0
name:               hbt
version:            0.1.0.0
license:            Unlicense
license-file:       UNLICENSE
maintainer:         henrytill@gmail.com
author:             Henry Till
tested-with:        ghc ==9.6.7
synopsis:           Heterogeneous Bookmark Transformation
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

extra-source-files:
    cabal.project
    src/Hbt/Formatter/HTML/*.mustache
    test/data/markdown/*.md
    test/data/markdown/*.yaml
    test/data/html/*.html
    test/data/html/*.yaml
    test/data/pinboard/*.json
    test/data/pinboard/*.xml
    test/data/pinboard/*.yaml

common exts
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot

library
    import: exts
    exposed-modules:
        Data.Multimap
        Hbt
        Hbt.Collection
        Hbt.Collection.Entity
        Hbt.Formatter.HTML
        Hbt.Parser
        Hbt.Parser.HTML
        Hbt.Parser.Markdown
        Hbt.Parser.Pinboard.JSON
        Hbt.Parser.Pinboard.XML

    hs-source-dirs:   src
    other-modules:
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base >=4.17.2.1 && <4.19,
        aeson ^>=2.2.3.0,
        bytestring ^>=0.11.5.4,
        commonmark ^>=0.2.6.1,
        commonmark-initial ^>=0.1.0.0,
        containers ^>=0.6.7,
        lens-family ^>=2.1.3,
        microstache ^>=1.0.3,
        mtl ^>=2.3.1,
        network-uri ^>=2.6.4.2,
        tagsoup ^>=0.14.8,
        text ^>=2.0.2,
        time ^>=1.12,
        vector ^>=0.13.2.0

executable hbt
    import:           exts
    main-is:          Main.hs
    hs-source-dirs:   exe
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base >=4.17.2.1 && <4.19,
        containers ^>=0.6.7,
        filepath ^>=1.4.301.0,
        text ^>=2.0.2,
        vector ^>=0.13.2.0,
        hbt

test-suite hbt-test
    import:           exts
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Data.MultimapTest
        Hbt.CollectionTest
        Hbt.Formatter.HTMLTest
        Hbt.Formatter.HTMLTest.TH
        Hbt.Parser.HTMLTest.TH
        Hbt.Parser.MarkdownTest.TH
        Hbt.Parser.HTMLTest
        Hbt.Parser.MarkdownTest
        Hbt.Parser.Pinboard.JSONTest
        Hbt.Parser.Pinboard.XMLTest
        Hbt.Parser.Pinboard.TH

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base >=4.17.2.1 && <4.19,
        bytestring ^>=0.11.5.4,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        dwergaz ^>=0.3.1.0,
        filepath ^>=1.4.301.0,
        template-haskell ^>=2.20.0.0,
        text ^>=2.0.2,
        vector ^>=0.13.2.0,
        yaml ^>=0.11.11.2,
        hbt

