cabal-version:      3.0
name:               hbt
version:            0.1.0.0
license:            Unlicense
license-file:       UNLICENSE
maintainer:         henrytill@gmail.com
author:             Henry Till
tested-with:        ghc ==9.10.2
synopsis:           Heterogeneous Bookmark Transformation
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

extra-source-files:
    cabal.project
    src/Hbt/Formatter/HTML/*.mustache
    test/data/markdown/*.md
    test/data/markdown/*.yaml
    test/data/html/*.html
    test/data/html/*.yaml
    test/data/pinboard/*.json
    test/data/pinboard/*.xml
    test/data/pinboard/*.yaml

common exts
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot

library
    import: exts
    exposed-modules:
        Data.Multimap
        Hbt
        Hbt.Collection
        Hbt.Collection.Entity
        Hbt.Formatter.HTML
        Hbt.Parser
        Hbt.Parser.HTML
        Hbt.Parser.Markdown
        Hbt.Parser.Pinboard.JSON
        Hbt.Parser.Pinboard.XML

    hs-source-dirs:   src
    other-modules:
        Hbt.Parser.Common
        Hbt.Parser.Pinboard.Common
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base >=4.20.1 && <4.22,
        aeson ^>=2.2.3.0,
        bytestring >=0.12.1.0 && <0.13,
        commonmark ^>=0.2.6.1,
        commonmark-initial ^>=0.1.0.0,
        containers >=0.7 && <0.9,
        lens-family ^>=2.1.3,
        microstache ^>=1.0.3,
        mtl ^>=2.3.1,
        network-uri ^>=2.6.4.2,
        tagsoup ^>=0.14.8,
        text ^>=2.1.1,
        time >=1.12 && <1.15,
        vector ^>=0.13.2.0

executable hbt
    import:           exts
    main-is:          Main.hs
    other-modules:
        TH
    hs-source-dirs:   exe
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base >=4.20.1 && <4.22,
        containers >=0.7 && <0.9,
        filepath ^>=1.5.2.0,
        microstache ^>=1.0.3,
        template-haskell >=2.22.0.0 && <2.24,
        text ^>=2.1.1,
        vector ^>=0.13.2.0,
        yaml ^>=0.11.11.2,
        hbt

test-suite hbt-test
    import:           exts
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Data.MultimapTest
        Hbt.CollectionTest
        Hbt.Formatter.HTMLTest
        Hbt.Parser.HTMLTest
        Hbt.Parser.MarkdownTest
        Hbt.Parser.Pinboard.JSONTest
        Hbt.Parser.Pinboard.XMLTest
        TestData
        TestUtilities

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base >=4.20.1 && <4.22,
        bytestring >=0.12.1.0 && <0.13,
        containers >=0.7 && <0.9,
        directory >=1.3.8.5 && <1.4,
        dwergaz ^>=0.3.1.0,
        filepath ^>=1.5.2.0,
        microstache ^>=1.0.3,
        text ^>=2.1.1,
        vector ^>=0.13.2.0,
        yaml ^>=0.11.11.2,
        hbt

