cabal-version:      3.0
name:               hbt-core
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Henry Till
maintainer:         henrytill@gmail.com
homepage:           https://github.com/henrytill/hbt-hs
copyright:          Copyright (c) 2025, Henry Till
tested-with:        ghc ==9.10.2
synopsis:           Heterogeneous Bookmark Transformation
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

extra-source-files:
    cabal.project
    src/Hbt/Formatter/HTML/*.mustache
    test/data/markdown/*.md
    test/data/markdown/*.yaml
    test/data/html/*.html
    test/data/html/*.yaml
    test/data/pinboard/json/*.json
    test/data/pinboard/json/*.yaml
    test/data/pinboard/xml/*.xml
    test/data/pinboard/xml/*.yaml

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wmissing-deriving-strategies

common exts
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot
        StrictData

library
    import: warnings, exts
    exposed-modules:
        Hbt
        Hbt.Collection
        Hbt.Entity
        Hbt.Entity.Time
        Hbt.Entity.URI
        Hbt.Formatter.HTML
        Hbt.Parser
        Hbt.Parser.HTML
        Hbt.Parser.Markdown
        Hbt.Parser.Pinboard.JSON
        Hbt.Parser.Pinboard.XML

    hs-source-dirs:   src
    other-modules:
        Hbt.Collection.Id
        Hbt.Collection.Repr
        Hbt.Parser.Common
        Hbt.Parser.Pinboard.Common
    default-language: GHC2024
    build-depends:
        base >=4.20.1 && <4.22,
        aeson ^>=2.2.3.0,
        bytestring >=0.12.1.0 && <0.13,
        commonmark ^>=0.2.6.1,
        commonmark-initial ^>=0.1.0.0,
        containers >=0.7 && <0.9,
        exceptions ^>=0.10.9,
        file-embed ^>=0.0.16,
        hbt-pinboard-types,
        html-parse ^>=0.2.2.0,
        lens-family ^>=2.1.3,
        microstache ^>=1.0.3,
        mtl ^>=2.3.1,
        text ^>=2.1.1,
        time >=1.12 && <1.15,
        uri-bytestring ^>=0.4.0.1,
        xeno ^>=0.6,
        vector ^>=0.13.2.0,
        yaml ^>=0.11.11.2

test-suite hbt-test
    import:           warnings, exts
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Hbt.CollectionTest
        TestData
        TestUtilities

    default-language: GHC2024
    build-depends:
        base >=4.20.1 && <4.22,
        bytestring >=0.12.1.0 && <0.13,
        containers >=0.7 && <0.9,
        directory >=1.3.8.5 && <1.4,
        dwergaz ^>=0.3.1.0,
        filepath ^>=1.5.2.0,
        split ^>=0.2.5,
        text ^>=2.1.1,
        vector ^>=0.13.2.0,
        yaml ^>=0.11.11.2,
        hbt-core
