cabal-version:      3.0
name:               hbt-pinboard-types
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Henry Till
maintainer:         henrytill@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wmissing-deriving-strategies
        -Wmissing-export-lists
        -Wmonomorphism-restriction
        -Wredundant-constraints

common exts
    default-extensions:
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot
        StrictData

library
    import:           warnings, exts
    exposed-modules:  Hbt.Pinboard
    other-modules:    Hbt.Pinboard.Bool
                      Hbt.Pinboard.Post
    -- other-extensions:
    build-depends:    base >=4.20.1 && <4.23,
                      aeson ^>=2.2.3.0,
                      text ^>=2.1.1,
                      time >=1.12 && <1.15,
    hs-source-dirs:   src
    default-language: GHC2024
